SOCIAL MEDIA FONT AWESOME SETTED

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../public/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
+
     </style>
 </head>
 
@@ -259,12 +263,13 @@
 
     <section class="getApp-section">
         <div class="app-title">Get the App</div>
-        
+
         <div class="headline-gold">The Ultimate</div>
         <div class="headline">Companion For Your Life</div>
-        
+
         <div class="subheading">
-            Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since unknown printer.
+            Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since unknown printer.
         </div>
 
         <div class="qr-card">
@@ -289,7 +294,7 @@
                 </ul>
             </div>
         </div>
-        
+
         <div class="footer-content">
             <div class="footer-column brand-column">
                 <div class="logo">
@@ -300,10 +305,11 @@
                     </div>
                 </div>
                 <p class="brand-description">
-                    Professional Car Care is just a tap away! Download the app Siana Cars & Get the best quote from vendors around you!
+                    Professional Car Care is just a tap away! Download the app Siana Cars & Get the best quote from
+                    vendors around you!
                 </p>
             </div>
-            
+
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul class="contact-info">
@@ -321,7 +327,7 @@
                     </li>
                 </ul>
             </div>
-            
+
             <div class="footer-column">
                 <h3>Payment Methods</h3>
                 <div class="payment-methods">
@@ -331,24 +337,29 @@
                     <img src="/public/images/tabby.png" alt="Tabby">
                     <img src="/public/images/pay.png" alt="Knet">
                 </div>
-                
+
                 <h3>Download Mobile App</h3>
                 <div class="app-download">
                     <a href="#"><img src="/public/images/Play-Store.png" alt="Google Play"></a>
                     <a href="#"><img src="/public/images/App-Store.png" alt="App Store"></a>
                 </div>
             </div>
-            
+
             <div class="footer-column">
                 <h3>Social Media</h3>
                 <div class="social-icons">
-                    <a href="#"><span class="social-icon">📷</span></a>
-                    <a href="#"><span class="social-icon">👤</span></a>
-                    <a href="#"><span class="social-icon">💬</span></a>
+                    <a href="#"><i class="fab fa-instagram" style="font-size: 24px; color: #e4405f;"></i>
+
+                    </a>
+                    <a href="#"><i class="fab fa-facebook" style="font-size: 24px; color: #1877f2;"></i>
+                    </a>
+                    <a href="#"><i class="fab fa-whatsapp" style="font-size: 24px; color: #25D366;"></i>
+
+                    </a>
                 </div>
             </div>
         </div>
-        
+
         <div class="footer-bottom">
             <p>Copyright© 2024 © Siana Technologies L.L.C-FZ. All Rights Reserved</p>
         </div>
